--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="contaner">
     <div class="sub1">
         <div class="img1">
-            <img src="edited.png">
+            <img src="images/edited.png">
         </div>
         <h2>ABOUT ME</h2>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; My name is Ujjal Rajbanshi.<br>
