--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="sub4">
         <h2 align="center">Education</h2>
     </div>
-    <p class="para2"><b style="color:black;">=></b>I am completed a 3 Months Python with Django<br>
+    <p class="para2"><b style="color:black;">=></b>I passed SEE Exam. I am completed a 3 Months Python with Django<br>
         Traning on April/15/2024 from Sipalay Infotech.<br>
     </p>
 
