--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2 align="center">Education</h2>
     </div>
     <p class="para2"><b style="color:black;">=></b>I passed SEE Exam. I am completed a 3 Months <br>
-        Python with Django Traning on April/15/2024 from Sipalay Infotech.
+        Python with Django Traning on April/15/2024 from<br> Sipalay Infotech.
     </p>
 
     <div class="sub5">
